--- a/flag.html
+++ b/flag.html
@@ -39,6 +39,7 @@
     </style>
 </head>
 <body>
+    <h1>my flag</h1>
     <div class="flag">
         <p class="one">The Flag</p>
         <div class="blue">
